--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -5,7 +5,7 @@ mixin dateWishes()
   section.date-wishes
     .date-wishes__wrap
       form(action="/rooms.html")
-        fieldset
+        fieldset.date-wishes__fieldset
           legend.date-wishes__title Найдём номера под ваши пожелания
           .date-wishes__group
             +input({
