--- a/src/components/likebtn/likebtn.pug
+++ b/src/components/likebtn/likebtn.pug
@@ -8,4 +8,4 @@ mixin likebtn(options = {})
           ? "likebtn__item  likebtn__item_active"
           : "likebtn__item";
       p(class=itemBtn)
-        button(type="button")= item.count
+        button(class="likebtn__btn" type="button")= item.count
