--- a/src/layout/main.pug
+++ b/src/layout/main.pug
@@ -22,6 +22,6 @@ html(lang="ru")
     .wrapper
       .content
         +header()
-        main
+        main(class=mainClass)
           block content
       +footer({ isBorderTop: !!footerBorderTop })
