--- a/src/page/auth/auth.pug
+++ b/src/page/auth/auth.pug
@@ -7,6 +7,7 @@ block variables
     const description = "Toxin authorization";
     const keywords = "Toxin keywords";
     const pageClass = "auth-page";
+    const mainClass = "auth-page__main"
   
 block content
   .container
