--- a/src/page/colors-and-type/colors-and-type.pug
+++ b/src/page/colors-and-type/colors-and-type.pug
@@ -13,65 +13,65 @@ block content
   .container
     .colors-and-type__wrap
       ul.colors-and-type__pallete
-        li
+        li.colors-and-type__pallete-li
           +colorPallete({
             title: "Dark Shade 100%",
             descr: "#1F2041",
             colorPallete: "#1F2041"
           })
-        li
+        li.colors-and-type__pallete-li
           +colorPallete({
             title: "Dark Shade 75%",
             descr: "#1F2041",
             colorPallete: "#1F2041",
             colorOpacity: 0.75
           })
-        li
+        li.colors-and-type__pallete-li
           +colorPallete({
             title: "Dark Shade 50%",
             descr: "#1F2041",
             colorPallete: "#1F2041",
             colorOpacity: 0.5
           })
-        li
+        li.colors-and-type__pallete-li
           +colorPallete({
             title: "Dark Shade 25%",
             descr: "#1F2041",
             colorPallete: "#1F2041",
             colorOpacity: 0.25
           })
-        li
+        li.colors-and-type__pallete-li
           +colorPallete({
             title: "Dark Shade 5%",
             descr: "#1F2041",
             colorPallete: "#1F2041",
             colorOpacity: 0.05
           })
-        li  
+        li.colors-and-type__pallete-li  
           +colorPallete({ title: "Purple", descr: "#BC9CFF", colorPallete: "#BC9CFF" })
-        li  
+        li.colors-and-type__pallete-li  
           +colorPallete({ title: "Green", descr: "#6FCF97", colorPallete: "#6FCF97" })
       ul.colors-and-type__typograph
-        li
+        li.colors-and-type__typograph-li
           +typograph({
             title: "This one is the sub-section or widget title",
             label: "H1",
           })
-        li
+        li.colors-and-type__typograph-li
           +typograph({
             title: "Next one is the item title inside widgets",
             titleModif: "h2",
             label: "H2",
             labelModif: "h2"
           })
-        li
+        li.colors-and-type__typograph-li
           +typograph({
             title: "This is a label or CTA text",
             titleModif: "h3",
             label: "H3",
             labelModif: "h3"
           })
-        li
+        li.colors-and-type__typograph-li
           +typograph({
               text: "This is the body text which is used for most of the design, like paragraphs, lists, etc.",
               label: "Body",
