--- a/src/page/registration/registration.pug
+++ b/src/page/registration/registration.pug
@@ -7,6 +7,7 @@ block variables
     const description = "Toxin registration";
     const keywords = "Toxin keywords";
     const pageClass = "registration-page";
+    const mainClass = "registration-page__main"
 
 block content
   .container
