--- a/src/style/utils/variables.scss
+++ b/src/style/utils/variables.scss
@@ -6,7 +6,7 @@ $phoneWidth: 480px;
 $smPhoneWidth: 320px;
 
 // Colors
-$mainColor: #ffffff;
+$mainColor: white;
 $accentColor: #bc9cff;
 $accentGradColor: #8ba4f9;
 $accentSecondСolor: #6fcf97;
