--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,21 +1,21 @@
 .checkbox__title {
   margin: 0;
   margin-bottom: 18px;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 12px;
   line-height: 15px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-style: normal;
   font-weight: bold;
+  font-style: normal;
   text-transform: uppercase;
 }
 
 .checkbox__title_expandabled {
   position: relative;
 
-  button {
+  .checkbox__expandable {
     width: 100%;
-    color: $contentColor;
     text-align: left;
+    color: $contentColor;
 
     &::after {
       position: absolute;
@@ -31,34 +31,90 @@
 }
 
 .checkbox__title_expandabled-open {
-  & button::after {
-    transform: rotate(180deg);
+  .checkbox__expandable::after {
     right: 17px;
+    transform: rotate(180deg);
   }
 }
 
 .checkbox__expandable {
   margin: 0;
-  padding-left: 0;
   padding-right: 0;
+  padding-left: 0;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 12px;
   line-height: 15px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-style: normal;
   font-weight: bold;
+  font-style: normal;
   text-transform: uppercase;
-  border: none;
   background: transparent;
+  border: none;
   cursor: pointer;
 }
 
 .checkbox__item {
-  width: 240px;
   margin: 0;
   margin-bottom: 12px;
+  width: 240px;
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  .checkbox__input[type='checkbox'] {
+    display: none;
+  }
+
+  .checkbox__input[type='checkbox']:checked {
+    & + .checkbox__label::after {
+      visibility: visible;
+      opacity: 1;
+    }
+
+    & + .checkbox__label::before {
+      border-color: $accentColor;
+    }
+  }
+
+  .checkbox__label {
+    position: relative;
+    padding-left: 30px;
+    display: block;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+    color: transparentize($contentColor, .55);
+    cursor: pointer;
+
+    &::before {
+      position: absolute;
+      top: -2px;
+      left: 0;
+      box-sizing: border-box;
+      width: 20px;
+      height: 20px;
+      content: '';
+      background-color: transparent;
+      border: 1px solid rgba(31, 32, 65, .25);
+      border-radius: 4px;
+      transition: border .3s ease 0s;
+    }
+
+    &::after {
+      position: absolute;
+      top: 3px;
+      left: 7px;
+      visibility: hidden;
+      width: 4px;
+      height: 6px;
+      opacity: 0;
+      content: '';
+      background-color: transparent;
+      border-right: 2px solid $accentColor;
+      border-bottom: 2px solid $accentColor;
+      transition: opacity .3s ease 0s, visibility .3s ease 0s;
+      transform: rotate(45deg);
+    }
   }
 }
 
@@ -66,75 +122,21 @@
   width: 264px;
 }
 
-.checkbox__item input[type='checkbox'] {
-  display: none;
-}
-
-.checkbox__item label {
-  position: relative;
-  display: block;
-  padding-left: 30px;
-  color: transparentize($contentColor, 0.55);
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 18px;
-  cursor: pointer;
-
-  &::before {
-    box-sizing: border-box;
-    position: absolute;
-    top: -2px;
-    left: 0;
-    width: 20px;
-    height: 20px;
-    content: '';
-    background-color: transparent;
-    border: 1px solid rgba(31, 32, 65, 0.25);
-    border-radius: 4px;
-    transition: border 0.3s ease 0s;
-  }
-
-  &::after {
-    content: '';
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    top: 3px;
-    left: 7px;
-    width: 4px;
-    height: 6px;
-    border-bottom: 2px solid $accentColor;
-    border-right: 2px solid $accentColor;
-    background-color: transparent;
-    transform: rotate(45deg);
-    transition: opacity 0.3s ease 0s, visibility 0.3s ease 0s;
-  }
-}
-
-.checkbox__item input[type='checkbox']:checked + label::after {
-  visibility: visible;
-  opacity: 1;
-}
-
-.checkbox__item input[type='checkbox']:checked + label::before {
-  border-color: $accentColor;
-}
-
 .checkbox__descr {
-  display: block;
   margin: 0;
   margin-top: 5px;
-  font-weight: normal;
-  color: transparentize($contentColor, 0.5);
+  display: block;
   font-size: 12px;
   line-height: 14px;
+  font-weight: normal;
+  color: transparentize($contentColor, .5);
 }
 
 .checkbox__item .checbox__lbl_rich {
   font-size: 14px;
-  font-weight: bold;
   line-height: 18px;
-  color: transparentize($contentColor, 0.25);
+  font-weight: bold;
+  color: transparentize($contentColor, .25);
 }
 
 .checkbox__item-list_hiden {
