--- a/src/components/copyright/copyright.scss
+++ b/src/components/copyright/copyright.scss
@@ -1,7 +1,7 @@
 .copyright {
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
   margin: 0;
-  color: transparentize($contentColor, 0.25);
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 14px;
   line-height: 17px;
+  color: transparentize($contentColor, .25);
 }
