--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -23,52 +23,52 @@
 
 .date-picker {
   position: absolute;
+  z-index: 100;
   top: -200px;
   left: 0;
-  z-index: 100;
+  visibility: hidden;
   box-sizing: border-box;
   width: 100%;
-  background-color: $mainColor;
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  border-radius: 4px;
-  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
-  transform: translateY(-10px);
-  visibility: hidden;
   opacity: 0;
-  transition: all 0.2s ease-in;
+  background-color: $mainColor;
+  border: 1px solid rgba(31, 32, 65, .25);
+  border-radius: 4px;
+  box-shadow: 0 10px 20px rgba(31, 32, 65, .05);
+  transition: all .2s ease-in;
+  transform: translateY(-10px);
 
   &_opened {
-    transform: translateY(0);
     visibility: visible;
     opacity: 1;
+    transform: translateY(0);
   }
 
   &_erroneous {
     transform: translate3d(0, 0, 0);
+    animation: shake .7s cubic-bezier(.36, .07, .19, .97) both;
     backface-visibility: hidden;
     perspective: 1000px;
-    animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   }
 }
 
 .date-picker__wrap {
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
 }
 
 .date-picker__control {
   display: flex;
-  justify-content: space-between;
   width: 100%;
+  justify-content: space-between;
 }
 
 .date-picker__title {
   margin: 0;
-  font-weight: bold;
   font-size: 19px;
   line-height: 24px;
+  font-weight: bold;
 }
 
 .date-picker__slider-btn {
@@ -80,8 +80,8 @@
   background-position: center center;
   border: none;
   outline: none;
+  transition: transform .2s ease;
   cursor: pointer;
-  transition: transform 0.2s ease;
 
   &:focus {
     border: 1px solid #1f2041;
@@ -116,9 +116,9 @@
   box-sizing: border-box;
   width: 40px;
   height: 40px;
-  font-weight: bold;
   font-size: 12px;
   line-height: 15px;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -127,24 +127,24 @@
 }
 
 .date-picker__day {
-  color: transparentize($contentColor, 0.5);
   font-weight: normal;
+  color: transparentize($contentColor, .5);
   border-radius: 22px;
   cursor: pointer;
 
   &:hover {
-    color: $mainColor;
     font-weight: bold;
+    color: $mainColor;
     background: linear-gradient(180deg, $accentColor, $accentGradColor);
   }
 
   &_selected-space {
+    background: transparentize($accentColor, .75);
     border-radius: 0;
-    background: transparentize($accentColor, 0.75);
   }
 
   &_not-current {
-    color: transparentize($contentColor, 0.75);
+    color: transparentize($contentColor, .75);
   }
 
   @media (max-width: 320px) {
@@ -153,14 +153,14 @@
 }
 
 .date-picker__calendar .date-picker__day_current {
-  color: $mainColor;
   font-weight: bold;
+  color: $mainColor;
   background: linear-gradient(180deg, $accentSecondСolor, $accentGradSecondСolor);
 }
 
 .date-picker__calendar .date-picker__day_selected {
-  color: $mainColor;
   font-weight: bold;
+  color: $mainColor;
   background: linear-gradient(180deg, $accentColor, $accentGradColor);
 }
 
@@ -178,12 +178,12 @@
     top: 0;
     width: 36%;
     height: 100%;
+    content: '';
     background: linear-gradient(
       180deg,
-      transparentize($accentColor, 0.75),
-      transparentize($accentGradColor, 0.75)
+      transparentize($accentColor, .75),
+      transparentize($accentGradColor, .75)
     );
-    content: '';
   }
 }
 
@@ -201,15 +201,15 @@
 
 .date-picker__button {
   padding: 0;
-  color: transparentize($contentColor, 0.5);
-  font-weight: bold;
   font-size: 12px;
   line-height: 15px;
+  font-weight: bold;
   text-transform: uppercase;
+  color: transparentize($contentColor, .5);
   background: transparent;
   border: none;
+  transition: color .2s ease-in-out, transform .1s ease-in-out;
   cursor: pointer;
-  transition: color 0.2s ease-in-out, transform 0.1s ease-in-out;
 
   &:hover {
     color: $accentColor;
@@ -223,14 +223,14 @@
     color: $accentColor;
 
     &:hover {
-      color: transparentize($contentColor, 0.5);
+      color: transparentize($contentColor, .5);
     }
   }
 }
 
 .date-picker-container {
   position: absolute;
-  width: 100%;
   top: 0;
   left: 0;
+  width: 100%;
 }
