--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -1,30 +1,30 @@
 .drop-down {
   position: absolute;
+  z-index: 100;
   top: -3px;
   left: 0;
-  z-index: 100;
+  visibility: hidden;
   box-sizing: border-box;
   width: 100%;
-  background: $mainColor;
-  border: 1px solid rgba(31, 32, 65, 0.5);
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
-  transform: translateY(-10px);
-  visibility: hidden;
   opacity: 0;
-  transition: all 0.2s ease-in;
+  background: $mainColor;
+  border: 1px solid rgba(31, 32, 65, .5);
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 10px 20px rgba(31, 32, 65, .05);
+  transition: all .2s ease-in;
+  transform: translateY(-10px);
 
   &_opened {
-    transform: translateY(0);
     visibility: visible;
     opacity: 1;
+    transform: translateY(0);
   }
 }
 
 .drop-down__wrap {
   padding-top: 7px;
-  padding-left: 14px;
   padding-right: 7px;
+  padding-left: 14px;
   padding-bottom: 8px;
 }
 
@@ -35,10 +35,10 @@
 }
 
 .drop-down__count-item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   margin-bottom: 7px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   &:last-child {
     margin-bottom: 0;
@@ -47,41 +47,41 @@
 
 .drop-down__counter-menu {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   width: 92px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .drop-down__count-item-name {
   margin: 0;
   padding: 0;
-  font-weight: bold;
   font-size: 12px;
   line-height: 15px;
+  font-weight: bold;
   text-transform: uppercase;
 }
 
 .drop-down__select-view {
-  width: 20px;
   margin: 0;
-  font-weight: bold;
+  width: 20px;
   font-size: 12px;
   line-height: 15px;
+  font-weight: bold;
   text-align: center;
 }
 
 .drop-down__counter-btn {
   position: relative;
+  padding: 0;
   box-sizing: border-box;
   width: 30px;
   height: 30px;
-  padding: 0;
-  color: transparentize($contentColor, 0.5);
   font-size: 18px;
   text-align: center;
   vertical-align: middle;
+  color: transparentize($contentColor, .5);
   background: $mainColor;
-  border: 1px solid transparentize($contentColor, 0.5);
+  border: 1px solid transparentize($contentColor, .5);
   border-radius: 50%;
   cursor: pointer;
 
@@ -104,30 +104,30 @@
   }
 
   &_disabled {
-    color: transparentize($contentColor, 0.75);
-    border: 1px solid transparentize($contentColor, 0.75);
+    color: transparentize($contentColor, .75);
+    border: 1px solid transparentize($contentColor, .75);
     cursor: default;
   }
 }
 
 .drop-down__control {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .drop-down__button {
   padding: 0;
-  color: transparentize($contentColor, 0.5);
-  font-weight: bold;
   font-size: 12px;
   line-height: 15px;
+  font-weight: bold;
   text-transform: uppercase;
+  color: transparentize($contentColor, .5);
   background: transparent;
   border: none;
+  transition: color .2s ease-in-out, transform .1s ease-in-out;
   cursor: pointer;
-  transition: color 0.2s ease-in-out, transform 0.1s ease-in-out;
 
   &:hover {
     color: $accentColor;
@@ -141,13 +141,13 @@
     color: $accentColor;
 
     &:hover {
-      color: transparentize($contentColor, 0.5);
+      color: transparentize($contentColor, .5);
     }
   }
 
   &_hiden {
-    opacity: 0;
     visibility: hidden;
+    opacity: 0;
   }
 }
 
