--- a/src/components/features/features.scss
+++ b/src/components/features/features.scss
@@ -6,10 +6,10 @@
 }
 
 .features__item {
-  display: flex;
   margin-bottom: 20px;
   padding-bottom: 20px;
-  border-bottom: 1px solid transparentize($contentColor, 0.9);
+  display: flex;
+  border-bottom: 1px solid transparentize($contentColor, .9);
 
   &:last-child {
     margin-bottom: 0;
@@ -22,12 +22,12 @@
 }
 
 .features__pict {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   margin-right: 9px;
+  display: flex;
   width: 48px;
   height: 48px;
+  justify-content: center;
+  align-items: center;
 }
 
 .features__content {
