--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,16 +1,15 @@
 .page-footer {
   position: relative;
-  flex: 0 0 auto;
-  background-color: #fff;
-  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
+  background-color: white;
+  box-shadow: 0 10px 20px rgba(31, 32, 65, .05);
 
   &::after {
     position: absolute;
     bottom: 78px;
     width: 100%;
     height: 1px;
-    background: transparentize($contentColor, 0.9);
     content: '';
+    background: transparentize($contentColor, .9);
 
     @media (max-width: 555px) {
       bottom: 120px;
@@ -22,7 +21,9 @@
   }
 
   &_short {
+    /* stylelint-disable */
     section.text-content {
+      /* stylelint-enable */
       width: 49%;
       text-align: center;
     }
@@ -33,7 +34,7 @@
   }
 
   &_with-border-top {
-    border-top: 1px solid transparentize($contentColor, 0.75);
+    border-top: 1px solid transparentize($contentColor, .75);
   }
 
   .text-content {
@@ -89,14 +90,15 @@
 }
 
 .page-footer__wrap_short {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   padding: 100px 0 108px;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* stylelint-disable */
   div.logo {
-    margin-left: 12px;
+    /* stylelint-enable */
     margin-bottom: 17px;
+    margin-left: 12px;
   }
 
   .text-content {
@@ -105,8 +107,8 @@
 }
 
 .page-footer__content {
-  display: flex;
   padding: 101px 0 96px;
+  display: flex;
 
   @media (max-width: 1100px) {
     padding-top: 50px;
@@ -114,17 +116,17 @@
   }
 
   @media (max-width: 768px) {
-    flex-direction: column;
     padding-top: 30px;
     padding-bottom: 40px;
+    flex-direction: column;
   }
 }
 
 .page-footer__col-group {
-  display: flex;
-  flex-grow: 1;
-  justify-content: space-between;
   padding-top: 2px;
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
 
   @media (max-width: 1100px) {
     flex-wrap: wrap;
@@ -132,14 +134,14 @@
 
   .page-footer__col {
     @media (max-width: 1100px) {
+      margin-bottom: 40px;
       box-sizing: border-box;
       width: 50%;
-      margin-bottom: 40px;
     }
 
     @media (max-width: 768px) {
-      width: 100%;
       margin-bottom: 40px;
+      width: 100%;
     }
 
     &:first-child {
@@ -167,6 +169,18 @@
 }
 
 .page-footer__col {
+  &:nth-child(2) {
+    @media (width: 1440px) {
+      margin-right: 93px;
+    }
+  }
+
+  &:last-child {
+    @media (width: 1440px) {
+      margin-left: auto;
+    }
+  }
+
   &_large:first-child {
     margin-right: 3.5%;
   }
@@ -190,30 +204,18 @@
       width: 100%;
     }
   }
-
-  &:nth-child(2) {
-    @media (width: 1440px) {
-      margin-right: 93px;
-    }
-  }
-
-  &:last-child {
-    @media (width: 1440px) {
-      margin-left: auto;
-    }
-  }
 }
 
 .page-footer__content > .page-footer__col {
   @media (max-width: 1100px) {
+    margin-right: 14%;
     box-sizing: border-box;
     width: 240px;
-    margin-right: 14%;
   }
 
   @media (max-width: 768px) {
-    width: 100%;
     margin-bottom: 40px;
+    width: 100%;
   }
 
   .text-content {
@@ -224,11 +226,11 @@
 }
 
 .page-footer__side-info {
+  padding: 29px 0;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: space-between;
-  padding: 29px 0;
+  align-items: center;
 
   @media (max-width: 555px) {
     flex-direction: column;
