--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,14 +1,14 @@
 .page-header {
   position: relative;
-  background-color: #fff;
-  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
+  background-color: white;
+  box-shadow: 0 10px 20px rgba(31, 32, 65, .05);
 }
 
 .page-header__wrap {
   position: relative;
+  padding: 17px 0 15px;
   display: flex;
   flex-wrap: wrap;
-  padding: 17px 0 15px;
 
   @media (max-width: 425px) {
     padding-right: 20px;
@@ -17,10 +17,10 @@
 }
 
 .page-header__auth {
-  display: flex;
-  align-items: center;
   margin-left: 22px;
   padding-bottom: 1px;
+  display: flex;
+  align-items: center;
 
   &_authenticated {
     position: relative;
@@ -36,13 +36,13 @@
       left: 0;
       width: 1px;
       height: 30px;
-      background: $contentColor;
-      opacity: 0.1;
+      opacity: .1;
       content: '';
+      background: $contentColor;
 
       @media (max-width: 1024px) {
-        left: auto;
         right: 0;
+        left: auto;
       }
 
       @media (max-width: 380px) {
@@ -52,14 +52,16 @@
 
     @media (max-width: 1024px) {
       margin-right: 20px;
-      padding-left: 0;
       padding-right: 20px;
+      padding-left: 0;
     }
   }
 
   @media (max-width: 1024px) {
-    order: 2;
     margin-left: auto;
+    /* stylelint-disable */
+    order: 2;
+    /* stylelint-enable */
   }
 }
 
@@ -74,21 +76,21 @@
     z-index: 100;
     top: 55px;
     left: 50%;
-    display: block;
-    width: 100vw;
     padding: 0;
+    display: block;
+    visibility: hidden;
+    width: 100vw;
     list-style: none;
     background: $mainColor;
+    transition: all .3s ease-in-out;
     transform: translate(-50%, -10px);
-    visibility: hidden;
-    transition: all 0.3s ease-in-out;
   }
 
   &_active {
     @media (max-width: 1024px) {
-      transform: translate(-50%, 0);
       visibility: visible;
       opacity: 1;
+      transform: translate(-50%, 0);
     }
   }
 
@@ -99,25 +101,25 @@
 
     &:last-child {
       @media (max-width: 1024px) {
-        box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 4px 2px -2px rgba(0, 0, 0, .2);
       }
     }
   }
 
-  a {
+  .page-header__auth-item-link {
     @media (max-width: 1024px) {
+      padding: 20px 0;
       display: inline-block;
       width: 100%;
-      padding: 20px 0;
-      color: transparentize($contentColor, 0.5);
       text-align: center;
-      text-decoration: none;
       vertical-align: top;
-      border-top: 1px solid transparentize($contentColor, 0.75);
+      text-decoration: none;
+      color: transparentize($contentColor, .5);
+      border-top: 1px solid transparentize($contentColor, .75);
     }
   }
 
-  a:hover {
+  .page-header__auth-item-link:hover {
     @media (max-width: 1024px) {
       color: darken($accentColor, 10%);
     }
@@ -130,7 +132,7 @@
   &:nth-child(2) {
     margin-right: 0;
     padding-left: 18px;
-    letter-spacing: 0.3px;
+    letter-spacing: .3px;
   }
 }
 
@@ -142,9 +144,9 @@
 
 .page-header__user-name {
   margin: 0;
+  opacity: .5;
   font-family: Montserrat, Quicksand, Arial, sans-serif;
   color: $contentColor;
-  opacity: 0.5;
 }
 
 .page-header__auth-profile {
@@ -157,10 +159,10 @@
     box-sizing: border-box;
     width: 24px;
     height: 24px;
+    content: '';
     background: url('../../components/header/user.svg') no-repeat;
     border: none;
     cursor: pointer;
-    content: '';
   }
 
   @media (max-width: 425px) {
