--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,25 +1,26 @@
 .input-group {
-  display: flex;
   margin: 0;
-
-&_with-label {
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+  display: flex;
 
   &:hover,
   &:focus {
     .input-group__input {
-      border-color: transparentize($contentColor, 0.25);
+      border-color: transparentize($contentColor, .25);
+
       &::placeholder {
-        color: transparentize($contentColor, 0.25);
+        color: transparentize($contentColor, .25);
       }
     }
 
     .input-group__button-split {
-      border-color: transparentize($contentColor, 0.25);
+      border-color: transparentize($contentColor, .25);
     }
+  }
+
+  &_with-label {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
@@ -31,44 +32,52 @@
 .input-group__descr {
   margin: 0;
   padding-bottom: 4px;
-  color: transparentize($contentColor, 0.55);
   font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 12px;
   line-height: 15px;
   text-transform: uppercase;
+  color: transparentize($contentColor, .55);
 }
 
 .input-group__label_big {
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 12px;
   line-height: 15px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-style: normal;
   font-weight: bold;
+  font-style: normal;
   text-transform: uppercase;
 }
 
 .input-group__split {
+  margin: 0;
   display: flex;
   width: 100%;
-  margin: 0;
 }
 
 .input-group__input {
+  padding: 9px 14px;
+  box-sizing: border-box;
+  width: 100%;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  color: transparentize($contentColor, .25);
+  border: 1px solid transparentize($contentColor, .75);
+  border-radius: 4px;
+  outline: none;
+  transition: border .4s ease;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
 
-  box-sizing: border-box;
-  width: 100%;
-  padding: 9px 14px;
-  color: transparentize($contentColor, 0.25);
-  font-size: 14px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  line-height: 24px;
-  border: 1px solid transparentize($contentColor, 0.75);
-  border-radius: 4px;
-  outline: none;
-  transition: border 0.4s ease;
+  &:hover,
+  &:focus {
+    border-color: transparentize($contentColor, .25);
+
+    + .input-group__button-split {
+      border-color: transparentize($contentColor, .25);
+    }
+  }
 
   &_with-icon {
     background: url('../../components/input/expand-more.svg') no-repeat;
@@ -87,65 +96,54 @@
   }
 
   &_active {
-    border-color: transparentize($contentColor, 0.5);
+    border-color: transparentize($contentColor, .5);
   }
 
   &_hovered {
-    border-color: transparentize($contentColor, 0.25);
+    border-color: transparentize($contentColor, .25);
 
     &::placeholder {
-      color: transparentize($contentColor, 0.25);
+      color: transparentize($contentColor, .25);
     }
   }
 
   &::placeholder {
-    color: transparentize($contentColor, 0.76);
     font-family: Montserrat, Quicksand, Arial, sans-serif;
     font-size: 14px;
-    transition: color 0.4s ease;
-  }
-
-  &:hover,
-  &:focus {
-    border-color: transparentize($contentColor, 0.25);
-
-    + .input-group__button-split {
-      border-color: transparentize($contentColor, 0.25);
-    }
+    color: transparentize($contentColor, .76);
+    transition: color .4s ease;
   }
 }
 
 .input-group__input_dark-placeholder {
   &::placeholder {
-    color: transparentize($contentColor, 0.25);
+    color: transparentize($contentColor, .25);
   }
 }
 
 .input-group__button-split {
+  padding: 0;
   box-sizing: border-box;
   width: 44px;
-  padding: 0;
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center center;
-  border: 1px solid transparentize($contentColor, 0.75);
+  border: 1px solid transparentize($contentColor, .75);
   border-left: none;
   border-radius: 0 4px 4px 0;
   outline: none;
+  transition: border .4s ease;
   cursor: pointer;
-  transition: border 0.4s ease;
 
   &:focus {
     border: 1px solid #1f2041;
   }
 
-  img {
-    transition: transform 0.1s ease;
-  }
-
   &_down-animation {
     &:active {
+      /* stylelint-disable */
       img {
+        /* stylelint-enable */
         transform: translateY(2px);
       }
     }
@@ -153,9 +151,16 @@
 
   &_right-animation {
     &:active {
+      /* stylelint-disable */
       img {
+        /* stylelint-enable */
         transform: translateX(5px);
       }
     }
+  }
+  /* stylelint-disable */
+  img {
+    /* stylelint-enable */
+    transition: transform .1s ease;
   }
 }
