--- a/src/components/likebtn/likebtn.scss
+++ b/src/components/likebtn/likebtn.scss
@@ -1,60 +1,62 @@
 .likebtn__title {
   margin: 0;
   margin-bottom: 16px;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 12px;
   line-height: 15px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-style: normal;
   font-weight: bold;
+  font-style: normal;
   text-transform: uppercase;
 }
 
 .likebtn__item {
-  display: inline-block;
-  vertical-align: top;
   margin: 0;
   margin-right: 6px;
+  display: inline-block;
+  vertical-align: top;
 
   &:last-child {
     margin-right: 0;
   }
+
+  .likebtn__btn {
+    position: relative;
+    margin: 0;
+    padding: 3px 0;
+    padding-right: 12px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    min-width: 40px;
+    min-height: 20px;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: normal;
+    content: '';
+    color: transparentize($contentColor, .55);
+    background-color: transparent;
+    border: 1px solid rgba(31, 32, 65, .25);
+    border-radius: 10px;
+
+    &::after {
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      width: 10px;
+      height: 8px;
+      content: '';
+      background: url('../../components/likebtn/like.png') no-repeat;
+    }
+  }
 }
 
-.likebtn__item button {
-  box-sizing: border-box;
-  position: relative;
-  min-width: 40px;
-  min-height: 20px;
-  margin: 0;
-  padding: 3px 0;
-  padding-left: 20px;
-  padding-right: 12px;
-  content: '';
-  color: transparentize($contentColor, 0.55);
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-weight: normal;
-  font-size: 10px;
-  line-height: 12px;
-  background-color: transparent;
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  border-radius: 10px;
-}
+.likebtn__item_active {
+  .likebtn__btn {
+    color: $accentColor;
+    border-color: $accentColor;
 
-.likebtn__item button::after {
-  position: absolute;
-  content: '';
-  top: 5px;
-  left: 5px;
-  width: 10px;
-  height: 8px;
-  background: url('../../components/likebtn/like.png') no-repeat;
-}
-
-.likebtn__item_active button {
-  color: $accentColor;
-  border-color: $accentColor;
-
-  &::after {
-    background: url('../../components/likebtn/like-active.png') no-repeat;
+    &::after {
+      background: url('../../components/likebtn/like-active.png') no-repeat;
+    }
   }
 }
