--- a/src/components/main-menu/main-menu.pug
+++ b/src/components/main-menu/main-menu.pug
@@ -8,7 +8,7 @@ mixin mainMenu(menuItems, id)
       span
       span
       span
-    nav
+    nav.main-menu__nav
       ul.main-menu__list
         each item in menuItems
           -
@@ -23,9 +23,9 @@ mixin mainMenu(menuItems, id)
             }
 
           li(class=itemClass)
-            a(href=item.path)= item.title
+            a(class="main-menu__item-link" href=item.path)= item.title
             if item.subMenu
               ul.main-menu__sub-menu
                 each subItem in item.subMenu
                   li.main-menu__sub-item
-                    a(href=subItem.path)= subItem.title
+                    a(class="main-menu__item-link" href=subItem.path)= subItem.title
