--- a/src/components/nav-menu/nav-menu.pug
+++ b/src/components/nav-menu/nav-menu.pug
@@ -6,4 +6,4 @@ mixin navMenu(navItem)
       ul.nav-menu__list
         each item in navItem.list
           li.nav-menu__item
-            a(href=item.path)= item.label
+            a(class="nav-menu__link" href=item.path)= item.label
