--- a/src/components/nav-menu/nav-menu.scss
+++ b/src/components/nav-menu/nav-menu.scss
@@ -1,17 +1,17 @@
 .nav-menu__list {
   margin: 0;
   padding: 0;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
   list-style: none;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
 }
 
 .nav-menu__title {
   margin: 0;
   margin-bottom: 20px;
   font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-weight: bold;
   font-size: 12px;
   line-height: 15px;
+  font-weight: bold;
   text-transform: uppercase;
 
   @media (max-width: 768px) {
@@ -27,12 +27,12 @@
     margin-bottom: 0;
   }
 
-  a {
-    color: transparentize($contentColor, 0.5);
+  .nav-menu__link {
     font-size: 14px;
     line-height: 17px;
     text-decoration: none;
-    transition: color 0.4s ease;
+    color: transparentize($contentColor, .5);
+    transition: color .4s ease;
 
     @media (max-width: 768px) {
       display: inline-block;
