--- a/src/components/ratebtn/ratebtn.pug
+++ b/src/components/ratebtn/ratebtn.pug
@@ -7,6 +7,6 @@ mixin ratebtn(options = {})
         .ratebtn__item
           - for (let i = 1; i < 6; ++i) {
             - const isChecked = i === 6 - item.currentRating;        
-            input(type="radio" id=`star-${item.idGroup}-${i}` name=item.idGroup value=`${i}` checked=isChecked)
-            label(for=`star-${item.idGroup}-${i}`)
+            input(class="ratebtn__input" type="radio" id=`star-${item.idGroup}-${i}` name=item.idGroup value=`${i}` checked=isChecked)
+            label(class="ratebtn__label" for=`star-${item.idGroup}-${i}`)
           - }
