--- a/src/components/ratebtn/ratebtn.scss
+++ b/src/components/ratebtn/ratebtn.scss
@@ -1,51 +1,51 @@
 .ratebtn__title {
   margin: 0;
   margin-bottom: 18px;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 12px;
   line-height: 15px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-style: normal;
   font-weight: bold;
+  font-style: normal;
   text-transform: uppercase;
 }
 
 .ratebtn__item {
+  margin-right: 25px;
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  margin-right: 25px;
   font-size: 0;
 
   &:last-child {
     margin-right: 0;
   }
 
-  input[type='radio'] {
+  .ratebtn__input[type='radio'] {
     display: none;
+
+    &:checked ~ .ratebtn__label {
+      background: url('../../components/ratebtn/star-active.png') no-repeat;
+    }
   }
 
-  label {
+  .ratebtn__label {
     position: relative;
+    margin-left: 4px;
     display: block;
     width: 20px;
     height: 20px;
-    margin-left: 4px;
     background: url('../../components/ratebtn/star.png') no-repeat;
     cursor: pointer;
+
+    &:hover,
+    &:hover ~ .ratebtn__label {
+      background: url('../../components/ratebtn/star-active.png') no-repeat;
+    }
 
     &:last-child {
       margin-left: 0;
     }
   }
-}
-
-.ratebtn__item label:hover,
-.ratebtn__item label:hover ~ label {
-  background: url('../../components/ratebtn/star-active.png') no-repeat;
-}
-
-.ratebtn__item input:checked ~ label {
-  background: url('../../components/ratebtn/star-active.png') no-repeat;
 }
 
 .ratebtn__item-wrap {
