--- a/src/components/toggle/toggle.pug
+++ b/src/components/toggle/toggle.pug
@@ -4,5 +4,5 @@ mixin toggle(options = {})
       p.toggle__title= options.title
     each item in options.items
       p.toggle__item
-        input(id=item.id type="checkbox" checked=item.isChecked)
-        label(for=item.id)= item.title
+        input(class="toggle__input" id=item.id type="checkbox" checked=item.isChecked)
+        label(class="toggle__label" for=item.id)= item.title
