--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -1,11 +1,11 @@
 .toggle__title {
   margin: 0;
   margin-bottom: 18px;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 12px;
   line-height: 15px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-style: normal;
   font-weight: bold;
+  font-style: normal;
   text-transform: uppercase;
 }
 
@@ -16,54 +16,65 @@
   &:last-child {
     margin-bottom: 0;
   }
-}
 
-.toggle__item input[type='checkbox'] {
-  display: none;
-}
-
-.toggle__item label {
-  position: relative;
-  display: block;
-  padding-left: 50px;
-  color: transparentize($contentColor, 0.55);
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 18px;
-  cursor: pointer;
-
-  &::before {
-    box-sizing: border-box;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 40px;
-    height: 20px;
-    content: '';
-    background-color: transparent;
-    border: 1px solid rgba(31, 32, 65, 0.25);
-    border-radius: 10px;
-    transition: border 0.3s ease 0s;
+  .toggle__input[type='checkbox'] {
+    display: none;
   }
 
-  &::after {
-    content: '';
-    position: absolute;
-    top: 4px;
-    left: 4px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background: rgba(31, 32, 65, 0.25);
-    transition: transform 0.2s ease 0s;
+  .toggle__input[type='checkbox']:checked {
+    & + .toggle__label::before {
+      border-color: $accentColor;
+    }
+
+    & + .toggle__label::after {
+      background: linear-gradient(180deg, $accentColor 0%, $accentGradColor 100%);
+      transform: translateX(20px);
+    }
+  }
+
+  .toggle__label {
+    position: relative;
+    padding-left: 50px;
+    display: block;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+    color: transparentize($contentColor, .55);
+    cursor: pointer;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      box-sizing: border-box;
+      width: 40px;
+      height: 20px;
+      content: '';
+      background-color: transparent;
+      border: 1px solid rgba(31, 32, 65, .25);
+      border-radius: 10px;
+      transition: border .3s ease 0s;
+    }
+
+    &::after {
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      width: 12px;
+      height: 12px;
+      content: '';
+      background: rgba(31, 32, 65, .25);
+      border-radius: 50%;
+      transition: transform .2s ease 0s;
+    }
   }
 }
 
-.toggle__item input[type='checkbox']:checked + label::after {
-  transform: translateX(20px);
-  background: linear-gradient(180deg, $accentColor 0%, $accentGradColor 100%);
-}
+// .toggle__item input[type='checkbox']:checked + label::after {
+//   background: linear-gradient(180deg, $accentColor 0%, $accentGradColor 100%);
+//   transform: translateX(20px);
+// }
 
-.toggle__item input[type='checkbox']:checked + label::before {
-  border-color: $accentColor;
-}
+// .toggle__item input[type='checkbox']:checked + label::before {
+//   border-color: $accentColor;
+// }
