--- a/src/page/main/main.scss
+++ b/src/page/main/main.scss
@@ -27,8 +27,8 @@
 
 .index-block__wrap {
   position: relative;
-  min-height: 830px;
   padding-top: 70px;
+  min-height: 830px;
 }
 
 .index-block__slogan {
@@ -41,11 +41,12 @@
     right: 24px;
   }
 
+  /* stylelint-disable */
   p {
     margin: 0;
-    color: transparentize($contentColor, 0.25);
     font-size: 14px;
     line-height: 24px;
     text-align: right;
+    color: transparentize($contentColor, .25);
   }
 }
