--- a/src/page/room-details/room-details.scss
+++ b/src/page/room-details/room-details.scss
@@ -29,18 +29,20 @@
 }
 
 .room-details__picture {
+  margin: 0 auto;
   display: grid;
+  max-width: 1440px;
   grid-template-columns: 981fr 461fr;
   justify-items: end;
-  max-width: 1440px;
-  margin: 0 auto;
 
+  /* stylelint-disable */
   img {
-    width: 100%;
-    height: 100%;
-    max-width: 981px;
     margin: 0;
     padding: 0;
+    /* stylelint-enable */
+    width: 100%;
+    max-width: 981px;
+    height: 100%;
   }
 }
 
@@ -49,7 +51,7 @@
   align-content: flex-start;
   flex-wrap: wrap;
   font-size: 0;
-
+  /* stylelint-disable */
   img {
     max-width: 461px;
     height: 50%;
@@ -58,13 +60,14 @@
       max-height: 240px;
     }
   }
+  /* stylelint-enable */
 }
 
 .room-details__title {
-  display: flex;
-  justify-content: space-between;
   margin: 0;
   margin-bottom: 23px;
+  display: flex;
+  justify-content: space-between;
   font-size: 18px;
   font-weight: bold;
 
@@ -78,19 +81,19 @@
   font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
-  color: transparentize($contentColor, 0.5);
+  color: transparentize($contentColor, .5);
 }
 
 .room-details__wrap {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
   padding: 70px 0 57px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 
   @media (max-width: 1160px) {
+    padding-top: 40px;
     flex-direction: column-reverse;
     align-items: center;
-    padding-top: 40px;
   }
 
   .total-card {
@@ -101,42 +104,42 @@
 }
 
 .room-details__content {
-  width: 61.3%;
   margin-right: 70px;
+  width: 61.3%;
 
   @media (max-width: 1160px) {
-    width: 100%;
     margin-right: 0;
+    width: 100%;
   }
 }
 
 .room-details__content-wrap {
   @media (max-width: 425px) {
-    padding-left: 20px;
     padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
 .room-details__column {
+  margin-bottom: 35px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 35px;
 
   &:last-child {
     margin-bottom: 0;
   }
 
   @media (max-width: 800px) {
-    flex-direction: column;
     width: 100%;
+    flex-direction: column;
   }
 
   .bullet {
     width: 37%;
 
     @media (max-width: 800px) {
-      width: 100%;
       margin-bottom: 20px;
+      width: 100%;
     }
   }
 
@@ -172,8 +175,8 @@
 }
 
 .room-details__info {
-  width: 48%;
   margin-right: 9px;
+  width: 48%;
 
   @media (max-width: 800px) {
     width: 100%;
@@ -184,13 +187,17 @@
   margin-bottom: 20px;
 }
 
-.room-details__info p {
-  width: 100%;
-  margin: 0;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  color: transparentize($contentColor, 0.25);
+/* stylelint-disable */
+.room-details__info {
+  p {
+    margin: 0;
+    /* stylelint-enable */
+    width: 100%;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    color: transparentize($contentColor, .25);
+  }
 }
 
 .room-details .date-picker {
