--- a/src/page/rooms/rooms.scss
+++ b/src/page/rooms/rooms.scss
@@ -38,8 +38,8 @@
 }
 
 .rooms-page__wrap {
+  padding: 30px 0 71px;
   display: flex;
-  padding: 30px 0px 71px;
 
   @media (max-width: 768px) {
     flex-direction: column;
@@ -47,8 +47,8 @@
   }
 
   @media (max-width: 425px) {
-    padding-left: 20px;
     padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
@@ -56,8 +56,8 @@
   margin-right: 60px;
 
   @media (max-width: 768px) {
-    width: 266px;
     margin-right: 0;
+    width: 266px;
   }
 }
 
@@ -80,27 +80,27 @@
 .filter__explan {
   margin: 0;
   margin-top: 14px;
-  color: transparentize($contentColor, 0.5);
   font-size: 12px;
   line-height: 14px;
+  color: transparentize($contentColor, .5);
 }
 
 .hotels__title {
   margin: 0;
   margin-bottom: 21px;
   font-size: 23px;
-  font-weight: bold;
   line-height: 30px;
+  font-weight: bold;
 }
 
 .hotels__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 100%;
   margin: 0;
   margin-bottom: 25px;
   padding: 0;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
   list-style: none;
 
   @media (max-width: 595px) {
