--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,42 +2,44 @@
 @import 'utils/variables.scss';
 @import '../fonts/fonts.scss';
 
+/* stylelint-disable */
 html,
 body {
   height: 100%;
 }
 
 body {
-  color: $contentColor;
-  font-size: 14px;
   font-family: Quicksand, Montserrat, Arial, sans-serif;
+  font-size: 14px;
+  color: $contentColor;
 }
+/* stylelint-enable */
 
 .container {
   position: relative;
+  margin: 0 auto;
+  padding: 0 10px;
   width: 80.5556%;
   min-width: 320px;
   max-width: 1920px;
-  margin: 0 auto;
-  padding: 0 10px;
 
   @media (max-width: 1300px) {
     width: 90.5556%;
   }
 
   @media (max-width: 425px) {
-    width: auto;
     margin: 0;
     padding: 0;
+    width: auto;
   }
 }
 
 .wrapper {
   display: flex;
-  flex-direction: column;
   min-height: 100%;
+  flex-direction: column;
 }
 
 .content {
-  flex: 1 0 auto;
+  flex-grow: 1;
 }
